2004-02-04 multipath-016
	* add a GROUP_BY_SERIAL flag. This should be useful for
	  controlers that activate they spare paths on simple IO
	  submition with a penalty. The StorageWorks HW defaults to
	  this mode, even if the MULTIBUS mode is OK.
	* remove unused sg_err.c
	* big restructuring : split devinfo.c from main.c. Export :
		* void basename (char *, char *);
		* int get_serial (int, char *);
		* int get_lun_strings (char *, char *, char *, char *);
		* int get_evpd_wwid(char *, char *);
		* long get_disk_size (char *);
	* stop passing struct env as param
	* add devmap_name proggy for udev to name devmaps as per their
	  internal DM name and not only by their sysfs enum name (dm-*)
	  The corresponding udev.rules line is :
	  KERNEL="dm-[0-9]*", PROGRAM="/sbin/devmap_name %M %m", NAME="%k", SYMLINK="%c"
	* remove make_dm_node fn & call. Rely on udev for this.
	* don't rely on the linux symlink in the udev/klibc dir since
	  udev build doesn't use it anymore. This corrects build breakage
2004-01-19 multipath-013
	* update the DM target synthax to the 2.6.0-udm5 style
2003-12-29 multipath-012
	* check hotplug event refers to a block device; if not exit early
	* refresh doc
	* add the uninstall target in Makefile
2003-12-22 multipath-010
	* tweak the install target in Makefile
	* stop passing fds as argument : this change enable a strict
	  segregation of ugly 2.4 code
	* sysfs version of get_lun_strings()
	* be careful about the return of get_unique_id() since errors 
	  formerly caught up by if(open()) in the caller fn are now returned
	  by get_unique_id()
	* send get_serial() in unused.c
	* introduce dm-simplecmd for RESUME & SUSPEND requests
	* split add_map() in setup_map() & dm-addmap()
	* setup_map() correctly submits "SUSPEND-RELOAD-RESUME or CREATE"
	  sequences instead of the bogus "RELOAD or CREATE"
	* don't print .sg_dev if equal to .dev (2.6) in print_path()
	* since the kernel code handles defective paths, remove all
	  code to cope with them :